name:                adventofcode
version:             0.1.0.0
synopsis:            Short description of your package
homepage:            https://github.com/fredefox/adventofcode#readme
license:             BSD3
license-file:        LICENSE
author:              Frederik Hanghøj Iversen
maintainer:          fhi.1990@gmail.com
copyright:           Copyright: (c) 2017 Frederik Hanghøj Iversen
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

-- To avoid duplicated efforts in documentation and dealing with the
-- complications of embedding Haddock markup inside cabal files, it is
-- common to point users to the README.md file.
description:         Please see the README on Github at <https://github.com/fredefox/adventofcode#readme>

library
  -- hs-source-dirs:      src
  -- exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , download == 0.3.*
                     , http-conduit == 2.2.*
  default-language:    Haskell2010

executable day-1
  hs-source-dirs:      day-1
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , adventofcode
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/fredefox/adventofcode
